fix auth delete